--- a/prometheus/prometheus-deployment.yml
+++ b/prometheus/prometheus-deployment.yml
@@ -1,8 +1,6 @@
-apiVersion: extensions/v1beta1
 kind: Deployment
+apiVersion: extensions/v1beta1
 metadata:
-  labels:
-    name: prometheus-deployment
   name: prometheus
 spec:
   replicas: 1
@@ -12,8 +10,8 @@ spec:
         app: prometheus
     spec:
       containers:
-      - image: quay.io/prometheus/prometheus:v1.0.1
-        name: prometheus
+      - name: prometheus
+        image: quay.io/prometheus/prometheus:v1.0.1
         command:
         - "/bin/prometheus"
         args:
