--- a/prometheus/prometheus-service.yml
+++ b/prometheus/prometheus-service.yml
@@ -1,14 +1,14 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: prometheussvc
+  name: prometheus
   labels:
     app: prometheus
 spec:
   type: NodePort
   ports:
-  - name: https
-    port: 9090
-    protocol: TCP
+    - name: https
+      port: 9090
+      protocol: TCP
   selector:
     app: prometheus
