--- a/ingress/haproxy-deployment.yml
+++ b/ingress/haproxy-deployment.yml
@@ -17,16 +17,19 @@ spec:
       nodeSelector:
         role: loadbalancer
       containers:
-      - name: haproxy
-        image: gcr.io/google_containers/servicelb:0.4
-        ports:
-        # prometheus
-        - containerPort: 9090
-          hostPort: 9090
-          protocol: TCP
-        # haproxy stats
-        - containerPort: 1936
-          hostPort: 1936
-          protocol: TCP
-        args:
-        - "--tcp-services=prometheussvc:9090"
+        - name: haproxy
+          image: gcr.io/google_containers/servicelb:0.4
+          volumeMounts:
+          - mountPath: /var/run
+            name: var-run
+          ports:
+          # for prometheus
+          - containerPort: 9090
+            hostPort: 9090
+            protocol: TCP
+          # for haproxy stats
+          - containerPort: 1936
+            hostPort: 1936
+            protocol: TCP
+          args:
+          - "--tcp-services=prometheussvc:9090"
