--- a/prometheus/prometheus-deployment.yml
+++ b/prometheus/prometheus-deployment.yml
@@ -1,5 +1,5 @@
-kind: Deployment
 apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: prometheus
 spec:
@@ -10,32 +10,33 @@ spec:
         app: prometheus
     spec:
       containers:
-        - name: prometheus
-          image: quay.io/prometheus/prometheus:v1.0.1
-          command:
-            - "/bin/prometheus"
-          args:
-            - "-config.file=/etc/prometheus/prometheus.yml"
-            - "-storage.local.path=/prometheus"
-            - "-storage.local.retention=24h"
-          ports:
-            - containerPort: 9090
-              protocol: TCP
-          volumeMounts:
-            - mountPath: "/prometheus"
-              name: data
-            - mountPath: "/etc/prometheus"
-              name: config-volume
-          resources:
-            requests:
-              cpu: 100m
-              memory: 100Mi
-            limits:
-              cpu: 500m
-              memory: 2500Mi
-        volumes:
-          - emptyDir: {}
-            name: data
-          - configMap:
-              name: prometheus-config
-            name: config-volume
+      - args:
+        - -config.file=/etc/prometheus/prometheus.yml
+        - -storage.local.path=/prometheus
+        - -storage.local.retention=24h
+        command:
+        - /bin/prometheus
+        image: prom/prometheus:v1.2.0
+        name: prometheus
+        ports:
+        - containerPort: 9090
+          hostPort: 9090
+          protocol: TCP
+        resources:
+          limits:
+            cpu: 500m
+            memory: 2500Mi
+          requests:
+            cpu: 100m
+            memory: 100Mi
+        volumeMounts:
+        - mountPath: /prometheus
+          name: data
+        - mountPath: /etc/prometheus
+          name: config-volume
+      volumes:
+      - emptyDir: {}
+        name: data
+      - configMap:
+          name: prometheus-config
+        name: config-volume
