--- a/prometheus/config-map/prometheus.yml
+++ b/prometheus/config-map/prometheus.yml
@@ -1,6 +1,7 @@
 global:
-  scrape_interval: 30s
-  scrape_timeout: 30s
+  scrape_interval: 10s
+  scrape_timeout: 10s
+  evaluation_interval: 10s
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -46,8 +47,8 @@ scrape_configs:
   # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
   # * `prometheus.io/port`: If the metrics are exposed on a different port to the
   # service then set this appropriately.
-  - job_name: 'kubernetes-service-endpoints'
-    scheme: https
+  - job_name: 'kubernetes-endpoints'
+    # scheme: https
     kubernetes_sd_configs:
     - api_servers:
       - 'https://kubernetes.default.svc'
@@ -121,7 +122,7 @@ scrape_configs:
   # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
   # * `prometheus.io/port`: Scrape the pod on the indicated port instead of the default of `9102`.
   - job_name: 'kubernetes-pods'
-    scheme: https
+    # scheme: https
     kubernetes_sd_configs:
     - api_servers:
       - 'https://kubernetes.default.svc'
