--- a/prometheus/prometheus-node-exporter.yml
+++ b/prometheus/prometheus-node-exporter.yml
@@ -5,17 +5,14 @@ metadata:
 spec:
   template:
     metadata:
+      name: prom-node-exporter
       labels:
         app: prom-node-exporter
-      name: prom-node-exporter
     spec:
+      hostPID: true
       containers:
-      - args:
-        - -collector.procfs=/host/proc
-        - -collector.sysfs=/host/sys
-        - -collector.filesystem.ignored-mount-points='^/(sys|proc|dev|host|etc)($|/)'
+      - name: prom-node-exporter
         image: prom/node-exporter:master
-        name: prom-node-exporter
         ports:
         - containerPort: 9100
           hostPort: 9100
@@ -30,24 +27,10 @@ spec:
         securityContext:
           privileged: true
         volumeMounts:
-        - mountPath: /host/proc
-          name: proc
-          readOnly: true
-        - mountPath: /host/sys
-          name: proc
-          readOnly: true
         - mountPath: /rootfs
           name: rootfs
           readOnly: true
-      hostNetwork: true
-      hostPID: true
       volumes:
-      - hostPath:
-          path: /proc
-        name: proc
-      - hostPath:
-          path: /sys
-        name: sys
-      - hostPath:
+      - name: rootfs
+        hostPath:
           path: /
-        name: rootfs
