--- a/prometheus/config-map/prometheus.yml
+++ b/prometheus/config-map/prometheus.yml
@@ -3,6 +3,11 @@ global:
   scrape_timeout: 10s
   evaluation_interval: 10s
 
+rule_files:
+  - 'kubelet.rules'
+  - 'kube-state.rules'
+  - 'node.rules'
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
