--- a/prometheus/prometheus-deployment.yml
+++ b/prometheus/prometheus-deployment.yml
@@ -10,25 +10,24 @@ spec:
         app: prometheus
     spec:
       containers:
-      - args:
+      - name: prometheus
+        image: prom/prometheus:v1.2.0
+        args:
         - -config.file=/etc/prometheus/prometheus.yml
+        - -alertmanager.url=http://alertmanager:9093
         - -storage.local.path=/prometheus
         - -storage.local.retention=24h
-        command:
-        - /bin/prometheus
-        image: prom/prometheus:v1.2.0
-        name: prometheus
         ports:
-        - containerPort: 9090
+        - name: webui
+          containerPort: 9090
           hostPort: 9090
-          protocol: TCP
         resources:
-          limits:
-            cpu: 500m
-            memory: 2500Mi
           requests:
             cpu: 100m
             memory: 100Mi
+          limits:
+            cpu: 500m
+            memory: 2500Mi
         volumeMounts:
         - mountPath: /prometheus
           name: data
