--- a/grafana/grafana-deployment.yml
+++ b/grafana/grafana-deployment.yml
@@ -10,7 +10,7 @@ spec:
         app: grafana
     spec:
       containers:
-        - name: grafana-core
+        - name: grafana
           image: grafana/grafana:3.1.0
           ports:
           - name: webui
