--- a/grafana/grafana-import-job.yml
+++ b/grafana/grafana-import-job.yml
@@ -50,4 +50,4 @@ spec:
       volumes:
       - name: config-volume
         configMap:
-          name: grafana-import-dashboards
+          name: grafana-config
