--- a/alertmanager/alertmanager-deployment.yml
+++ b/alertmanager/alertmanager-deployment.yml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: alertmanager
-        image: prom/alertmanager:v0.5.0-beta.0
+        image: prom/alertmanager:v0.5.0
         args:
         - -config.file=/etc/alertmanager/config.yml
         - -storage.path=/alertmanager
