--- a/prometheus/config-map/prometheus.yml
+++ b/prometheus/config-map/prometheus.yml
@@ -8,35 +8,69 @@ rule_files:
   - 'kube-state.rules'
   - 'node.rules'
 
+# A scrape configuration for running Prometheus on a Kubernetes cluster.
+# This uses separate scrape configs for cluster components (i.e. API server, node)
+# and services to allow each to use different authentication configs.
+#
+# Kubernetes labels will be added as Prometheus labels on metrics via the
+# `labelmap` relabeling action.
+
+# Scrape config for API servers.
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
 
   # Scrape config for apiserver components.
-  # - job_name: 'kubernetes-apiserver'
-  #   scheme: https
-  #   tls_config:
-  #     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-  #   bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-  #   kubernetes_sd_configs:
-  #   - api_servers:
-  #     - 'https://kubernetes.default.svc'
-  #     in_cluster: true
-  #     role: apiserver
+  - job_name: 'kubernetes-apiserver'
+
+    # Default to scraping over https. If required, just disable this or change to
+    # `http`.
+    scheme: https
+
+    # This TLS & bearer token file config is used to connect to the actual scrape
+    # endpoints for cluster components. This is separate to discovery auth
+    # configuration (`in_cluster` below) because discovery & scraping are two
+    # separate concerns in Prometheus.
+    tls_config:
+      ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+      # If your node certificates are self-signed or use a different CA to the
+      # master CA, then disable certificate verification below. Note that
+      # certificate verification is an integral part of a secure infrastructure
+      # so this should only be disabled in a controlled environment. You can
+      # disable certificate verification by uncommenting the line below.
+      #
+      # insecure_skip_verify: true
+    bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+
+    static_configs:
+    - targets:
+      - kubernetes.default.svc
 
   # Scrape config for nodes.
   - job_name: 'kubernetes-nodes'
+
+    # Default to scraping over https. If required, just disable this or change to
+    # `http`.
     scheme: https
+
+    # This TLS & bearer token file config is used to connect to the actual scrape
+    # endpoints for cluster components. This is separate to discovery auth
+    # configuration (`in_cluster` below) because discovery & scraping are two
+    # separate concerns in Prometheus.
     tls_config:
       ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+      # If your node certificates are self-signed or use a different CA to the
+      # master CA, then disable certificate verification below. Note that
+      # certificate verification is an integral part of a secure infrastructure
+      # so this should only be disabled in a controlled environment. You can
+      # disable certificate verification by uncommenting the line below.
       insecure_skip_verify: true
     bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+
     kubernetes_sd_configs:
-    - api_servers:
-      - 'https://kubernetes.default.svc'
-      in_cluster: true
-      role: node
+    - role: node
+
     relabel_configs:
     - action: labelmap
       regex: __meta_kubernetes_node_label_(.+)
@@ -52,13 +86,11 @@ scrape_configs:
   # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
   # * `prometheus.io/port`: If the metrics are exposed on a different port to the
   # service then set this appropriately.
-  - job_name: 'kubernetes-endpoints'
-    # scheme: https
+  - job_name: 'kubernetes-service-endpoints'
+
     kubernetes_sd_configs:
-    - api_servers:
-      - 'https://kubernetes.default.svc'
-      in_cluster: true
-      role: endpoint
+    - role: endpoints
+
     relabel_configs:
     - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
       action: keep
@@ -92,15 +124,18 @@ scrape_configs:
   #
   # * `prometheus.io/probe`: Only probe services that have a value of `true`
   - job_name: 'kubernetes-services'
+
+    # Default to scraping over https. If required, just disable this or change to
+    # `http`.
     scheme: https
+
     metrics_path: /probe
     params:
       module: [http_2xx]
+
     kubernetes_sd_configs:
-    - api_servers:
-      - 'https://kubernetes.default.svc'
-      in_cluster: true
-      role: service
+    - role: service
+
     relabel_configs:
     - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
       action: keep
@@ -127,12 +162,10 @@ scrape_configs:
   # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
   # * `prometheus.io/port`: Scrape the pod on the indicated port instead of the default of `9102`.
   - job_name: 'kubernetes-pods'
-    # scheme: https
+
     kubernetes_sd_configs:
-    - api_servers:
-      - 'https://kubernetes.default.svc'
-      in_cluster: true
-      role: pod
+    - role: pod
+
     relabel_configs:
     - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
       action: keep
