--- a/node-exporter/node-exporter-daemonset.yml
+++ b/node-exporter/node-exporter-daemonset.yml
@@ -12,7 +12,7 @@ spec:
       hostPID: true
       containers:
       - name: prom-node-exporter
-        image: prom/node-exporter:master
+        image: prom/node-exporter:v0.13.0-rc.1
         ports:
         - name: exporter
           containerPort: 9100
