--- a/node-exporter/node-exporter-daemonset.yml
+++ b/node-exporter/node-exporter-daemonset.yml
@@ -12,9 +12,10 @@ spec:
       hostPID: true
       containers:
       - name: prom-node-exporter
-        image: prom/node-exporter:v0.13.0-rc.1
+        image: prom/node-exporter:master
         ports:
         - name: exporter
+          # hostPort: 9100
           containerPort: 9100
         resources:
           requests:
