--- a/prometheus/prometheus-configmap.yml
+++ b/prometheus/prometheus-configmap.yml
@@ -106,6 +106,11 @@ data:
 
     ### Cluster resources ###
 
+    cluster:memory_allocation:bytes =
+      sum by (cluster) (
+        machine_memory_bytes
+      )
+
     cluster:memory_allocation:percent =
       100 * sum by (cluster) (
         container_spec_memory_limit_bytes{pod_name!=""}
@@ -113,9 +118,14 @@ data:
         machine_memory_bytes
       )
 
+    cluster:memory_used:bytes =
+      sum by (cluster) (
+        container_memory_usage_bytes{pod_name!="",id="/"}
+      )
+
     cluster:memory_used:percent =
       100 * sum by (cluster) (
-        container_memory_usage_bytes{pod_name!=""}
+        container_memory_usage_bytes{pod_name!="",id="/"}
       ) / sum by (cluster) (
         machine_memory_bytes
       )
@@ -125,6 +135,11 @@ data:
         container_spec_cpu_shares{pod_name!=""}
       ) / sum by (cluster) (
         container_spec_cpu_shares{id="/"} * on(cluster,instance) machine_cpu_cores
+      )
+
+    cluster:node_cpu_use:millicores =
+      sum by (cluster) (
+        rate(node_cpu{mode!="idle"}[5m])
       )
 
     cluster:node_cpu_use:percent =
