--- a/monitoring-limits.yml
+++ b/monitoring-limits.yml
@@ -7,8 +7,8 @@ spec:
   limits:
   - type: Pod
     max:
-      cpu: 500m
-      memory: 500Mi
+      cpu: "1"
+      memory: 1Gi
     min:
       cpu: 10m
       memory: 3Mi
@@ -20,8 +20,8 @@ spec:
       cpu: 50m
       memory: 10Mi
     max:
-      cpu: 500m
-      memory: 500Mi
+      cpu: "1"
+      memory: 1Gi
     min:
       cpu: 10m
       memory: 3Mi
