--- a/grafana/grafana-deployment.yml
+++ b/grafana/grafana-deployment.yml
@@ -1,13 +1,16 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: grafana-core
+  name: grafana
+  labels:
+    app: grafana
 spec:
   replicas: 1
   template:
     metadata:
       labels:
         app: grafana
+        kind: ui
     spec:
       containers:
         - name: grafana
@@ -17,12 +20,9 @@ spec:
             hostPort: 3000
             containerPort: 3000
           resources:
-            limits:
-              cpu: 100m
-              memory: 100Mi
             requests:
-              cpu: 100m
-              memory: 100Mi
+              cpu: 250m
+              memory: 300Mi
           env:
             - name: GF_AUTH_BASIC_ENABLED
               value: "false"
