--- a/grafana/grafana-deployment.yml
+++ b/grafana/grafana-deployment.yml
@@ -20,6 +20,9 @@ spec:
             hostPort: 3000
             containerPort: 3000
           resources:
+            limits:
+              cpu: 250m
+              memory: 300Mi
             requests:
               cpu: 250m
               memory: 300Mi
